tests/baselines/reference/TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName(strict=true).errors.txt
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(17,9): error TS2564: Property 'length' has no initializer and is not definitely assigned in the constructor.
TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts(25,17): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.


==== TwoInternalModulesThatMergeEachWithExportedModulesOfTheSameName.ts (2 errors) ====
    module A.B {
        export var x: number;
    }
    
    module A{ 
        module B {
            export var x: string;
        }
    }
    
    // ensure the right var decl is exported
    var x: number;
    var x = A.B.x;
    
    module X.Y.Z {
        export class Line {
            length: number;
            ~~~~~~
!!! error TS2564: Property 'length' has no initializer and is not definitely assigned in the constructor.
        }
    }
    
    module X {
        export module Y {
            module Z {
                export class Line {
                    name: string;
                    ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
                }
            }
        }
    }
    
    // make sure merging works as expected
    var l: { length: number };
    var l: X.Y.Z.Line;
    